feat(projection): add route to get projection from service
